// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm LoginForm with rememberMeLabel 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r17:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r1a:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-password-id"
            name="pf-login-password-id"
            required=""
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:r1d:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="pf-login-remember-me-id"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="pf-login-remember-me-id"
          >
            Remember me
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r1e:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LoginForm LoginForm with show password 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r1h:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-input-group"
        >
          <div
            class="pf-v6-c-input-group__item pf-m-fill"
          >
            <span
              class="pf-v6-c-form-control"
            >
              <input
                aria-invalid="false"
                data-ouia-component-id="OUIA-Generated-TextInputBase-:r1k:"
                data-ouia-component-type="PF6/TextInput"
                data-ouia-safe="true"
                id="pf-login-password-id"
                name="pf-login-password-id"
                required=""
                type="password"
                value=""
              />
            </span>
          </div>
          <div
            class="pf-v6-c-input-group__item"
          >
            <button
              aria-label="Show password"
              class="pf-v6-c-button pf-m-control"
              data-ouia-component-id="OUIA-Generated-Button-control-:r1l:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r1m:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LoginForm should render Login form 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r2:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r5:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-password-id"
            name="pf-login-password-id"
            required=""
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r6:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
